# mdwiki

./: MANIFEST.in  README.MD  README.md  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
mdwiki/: cli.py  config.json  mdwiki.py  mdx_alignmath.py  mdx_eqnmath.py  mdx_mathjax.py
mdwiki/templates/default/: detail.html  footer.html  index.html  layout.html  tag.html
mdwiki/templates/default/css/: mytheme.css
post/2018/09/23/: shadowsocks服务端和客户端安装.md
post/2020/04/06/: shadow-socks白皮书.md
post/2020/04/07/: rfc1928-SOCKS5翻译.md
post/2020/05/02/: KCP协议.md  kcp,udp2raw,udp-speeder的关系.md
