[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdwiki"
dynamic = ["version"]
description = "Zero-config static site builder for markdown blogs"
readme = "README.MD"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "niceMachine", email = "xuchaoo@gmail.com" }
]
dependencies = [
  "markdown>=3.7,<4",
  "Pygments==2.7.4",
  "beautifulsoup4==4.6.3",
  "click>=8.1,<9",
  "Jinja2>=2.10.1",
  "lxml",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/drunkpig/mdwiki"
Repository = "https://github.com/drunkpig/mdwiki"

[project.scripts]
mdwiki_exec = "mdwiki.cli:main"

[tool.setuptools]
packages = ["mdwiki"]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "mdwiki.__version__" }

[tool.setuptools.package-data]
mdwiki = [
  "config.json",
  "templates/**/*",
]
